src/objects/Podracer__c.object
<CustomObject>
    <fields>
        <fullName>Classs__c</fullName>
        <description>Aircraft class</description>
        <inlineHelpText>Aircraft class</inlineHelpText>
        <label>Classs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CokpitLength__c</fullName>
        <description>Length of the cockpit in meters</description>
        <inlineHelpText>Length of the cockpit in meters</inlineHelpText>
        <label>Cokpit length</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crew__c</fullName>
        <description>A brief description of flight crew</description>
        <inlineHelpText>A brief description of flight crew</inlineHelpText>
        <label>Crew</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineLength__c</fullName>
        <description>Length of an engine</description>
        <inlineHelpText>Length of an engine</inlineHelpText>
        <label>Engine length</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <referenceTo>Manufacturer__c</referenceTo>
        <relationshipLabel>Podracers</relationshipLabel>
        <relationshipName>Podracers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ManufacturingDate__c</fullName>
        <description>Year when the vehicle was manufactured</description>
        <inlineHelpText>Year when the vehicle was manufactured</inlineHelpText>
        <label>Manufacturing date</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSpeed__c</fullName>
        <description>Maximum ground speed in km/h</description>
        <inlineHelpText>Maximum ground speed in km/h</inlineHelpText>
        <label>Max speed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptionalEquipment__c</fullName>
        <description>A description of installed options or customizations</description>
        <inlineHelpText>A description of installed options or customizations</inlineHelpText>
        <label>Optional equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Current selling price</description>
        <inlineHelpText>Current selling price</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Podracer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Podracer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Podracers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>